Fixed canvas not centered bug

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,13 @@ body{
     margin-top: 0px;
 }
 
-canvas{
+.canvasContainer {
+    width: 100%;
+    text-align:center;
+}
+
+canvas {
+    display: inline;
     border: 1px solid black;
 }
 
